Remove unnecessary opens