@@ -95,7 +95,6 @@
                 <artifactId>maven-surefire-plugin</artifactId>
                 <configuration>
                     <argLine>
-                    --add-opens org.leadpony.justify/org.leadpony.justify.tests.helper=ALL-UNNAMED
                     -Duser.language=en
                     -Duser.country=US
                     -Djava.util.logging.config.file=${project.build.testOutputDirectory}/logging.properties
